wrap ellipse in a clipping div and set height of background ellipse to fixed

--- a/client/src/styles/background.css
+++ b/client/src/styles/background.css
@@ -41,8 +41,8 @@ section#faqs {
   #background {
     background: linear-gradient(180deg, #216782, #306379);
     position: absolute;
-    overflow: hidden;
-    height: 100%;
+    height: 75rem;
+    min-height: 100%;
     width: 100%;
   }
 }
